[package]
name = "osintui"
version = "0.1.1"
license = "MIT"
description = "Open Source Intelligence Terminal User Interface"
edition = "2021"

[dependencies]
anyhow = "1.0.43"
backtrace = "0.3.57"
chrono = "0.4"
crossterm = { version = "0.19", features = [ "serde" ] }
dirs = "5.0.0"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.12.0", features = ["full"] }
toml = "0.8"
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
unicode-width = "0.1.8"
